        * .begin() and .end() are now constexpr for strong::range types. Thanks
          Harald Achitz for reporting the missing specifiers.

        * Added .size() member to strong::range types, if the underlying type
          has a .size() member. Thanks Harald Achitz for the suggestion.

v13 2023-11-29

        * Added static_assert() messages explaining why a modifier cannot be
          used with an underlying type. Thank you SilmaliTech for suggesting
          the improvement.

        * Added modifier `invocable` for types with operator(). Thank you
          Dominic Koepke for the suggestion and the draft implementation.

v12 2023-07-20

        * Fixed a bug where fmt formatter function was not const, as it must be
          per the documentation. Thank you Tim Blechmann for submitting the
          fix.

        * Strong types can be weakly_ordered, strongly_ordered and
          partially_ordered, using operator <=> in C++20 and later. Huge thanks
          to Björn Schäpers and Tim Blechmann for the suggestions, discussions
          and infinite patience.

v11 2023-05-02

        * A strong type can now be used as an NTTP (Non Type Template Parameter)

            using type = strong::type<int, struct int_>;

            template <type t>
            struct S {
                constexpr operator int() const { return value_of(t);}
            };

            int main()
            {
                S<type{3}> obj;
                return obj;
            }

          Thank you Toni Neubert for the implementation.

v10 2023-02-03

        * Corrected the test for, and use of, concepts when specializing
          std::numeric_limits<> for strong::arithmetic types. Thank you
          Björn Schäpers for reporting.

v9 2023-01-23

        * Lowered the minimum required CMake version to 3.7, unless unit-tests
          are built.

        * A type predicate strong::type_is_v<type, modifier> has been introduced.